# nu_plugin_secret

./: .build_mode  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TESTING.md  config.example.toml  deny.toml  install.ps1  install.sh
.claude/commands/: pr-create.md
.claude/skills/update-adr-inventory/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_issue.yml
.github/workflows/: ci.yml  docs.yml  monitoring.yml  release.yml
benches/: performance_regression.rs  plugin_startup.rs  secret_performance.rs
docs/: BEST_PRACTICES.md  CONFIGURATION.md  DISASTER_RECOVERY.md  IDE_SUPPORT.md  MIGRATION.md  RELEASE.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_AUDIT_REPORT.md  STYLE_GUIDE.md  SUPPORT_PROCEDURES.md  TYPE_SELECTION_GUIDE.md
docs/adrs/: README.md  adr-0000.md
docs/plan/: configuration.md  project.md  technical-viability.md
docs/v0.7.0/: crates.js  help.html  settings.html  src-files.js
docs/v0.7.0/nu_plugin_secret/: all.html  index.html  macro.record_metric!.html  macro.record_metric.html  macro.time_block!.html  macro.time_block.html  sidebar-items.js  struct.SecretBinary.html  struct.SecretBool.html  struct.SecretDate.html  struct.SecretFloat.html  struct.SecretInt.html  struct.SecretList.html  struct.SecretPlugin.html  struct.SecretRecord.html  struct.SecretString.html
docs/v0.7.0/nu_plugin_secret/commands/: index.html  sidebar-items.js  struct.SecretConfigExportCommand.html  struct.SecretConfigImportCommand.html  struct.SecretConfigResetCommand.html  struct.SecretConfigShowCommand.html  struct.SecretConfigValidateCommand.html  struct.SecretConfigureCommand.html  struct.SecretContainsCommand.html  struct.SecretHashCommand.html  struct.SecretInfoCommand.html  struct.SecretIsEmptyCommand.html  struct.SecretLengthCommand.html  struct.SecretTypeOfCommand.html  struct.SecretUnwrapCommand.html  struct.SecretValidateCommand.html  struct.SecretValidateFormatCommand.html  struct.SecretWrapWithCommand.html
docs/v0.7.0/nu_plugin_secret/config/: enum.ConfigError.html  enum.RedactionContext.html  enum.SecurityLevel.html  fn.audit_config_change.html  fn.get_config_file_path.html  index.html  sidebar-items.js  struct.ConfigManager.html  struct.PluginConfig.html  struct.RedactionConfig.html  struct.SecurityConfig.html
docs/v0.7.0/nu_plugin_secret/memory_optimizations/: index.html  sidebar-items.js  struct.MemoryStats.html  struct.SecretMemoryPool.html
docs/v0.7.0/nu_plugin_secret/performance_monitoring/: enum.MetricType.html  enum.Unit.html  fn.get_monitor.html  fn.init_monitoring.html  index.html  sidebar-items.js  struct.Measurement.html  struct.MonitoringConfig.html  struct.PerformanceMonitor.html  struct.PerformanceReport.html  struct.RegressionAlert.html  struct.Statistics.html
docs/v0.7.0/nu_plugin_secret/redaction/: fn.generate_redacted_string_with_custom_template.html  fn.generate_redacted_string_with_custom_template_and_value.html  fn.get_cached_redacted_string.html  fn.get_cached_redacted_string_with_length.html  fn.get_redacted_string_with_custom_template_and_value.html  fn.get_redacted_string_with_length.html  fn.get_redacted_string_with_value.html  fn.init_redaction_templating.html  index.html  sidebar-items.js
docs/v0.7.0/nu_plugin_secret/startup_optimizations/: fn.initialize_plugin.html  index.html  sidebar-items.js  struct.StartupConfig.html
docs/v0.7.0/nu_plugin_secret/tera_functions/: fn.register_all_standard_functions.html  fn.register_mask_partial_function.html  fn.register_replicate_function.html  fn.register_reverse_function.html  fn.register_strlen_function.html  fn.register_take_function.html  index.html  sidebar-items.js
docs/v0.7.0/search.index/: 05fdf2a1b88d.js  0676876094cf.js  06dc8d1112e1.js  0be9b56a3677.js  0c61da21b111.js  0c734b4b5c72.js  0dc72403a734.js  0e65ec023ea9.js  0ebe4bfd5d52.js  0f05d30de343.js  1001ff27d339.js  10cd4d915b63.js  126ea11da896.js  17d89c38f760.js  200cebb3f249.js  20d5d2930146.js  227be83bbc37.js  232ed6fd8c94.js  2544ceff18e9.js  27f877c46cf4.js  2987bd241d3a.js  29a72ed06a8c.js  2bde5b7827c1.js  2d4ba4c7bc61.js  2de2ade31532.js  370e602d0ada.js  39d477d97122.js  3ba6b6261c61.js  3f278894f9f9.js  423214ed3caa.js  42ead9ce57e9.js  42fae61fac12.js  44f7dc3f7618.js  45c86e61dd35.js  479b68198f44.js  48400f434465.js  48493e952cce.js  5299639c3133.js  561e4627b84e.js  57e459c82bd6.js  (+19 more)
docs/v0.7.0/search.index/crateNames/: bfc1ec5ef952.js
docs/v0.7.0/search.index/desc/: f80ca11f8f54.js
scripts/: check.sh  install-plugin.sh  run_nu_tests.sh
src/: config.rs  lib.rs  main.rs  memory_optimizations.rs  performance_monitoring.rs  redaction.rs  startup_optimizations.rs  tera_functions.rs
src/commands/: config_export.rs  config_import.rs  config_reset.rs  config_show.rs  config_validate.rs  configure.rs  contains.rs  hash.rs  info.rs  is_empty.rs  length.rs  mod.rs  type_of.rs  unwrap.rs  validate.rs  validate_format.rs  wrap.rs  wrap_binary.rs  wrap_bool.rs  wrap_date.rs  wrap_float.rs  wrap_int.rs  wrap_list.rs  wrap_record.rs  wrap_string.rs  wrap_with.rs
src/secret_types/: mod.rs  operations.rs  secret_binary.rs  secret_bool.rs  secret_date.rs  secret_float.rs  secret_int.rs  secret_list.rs  secret_record.rs  secret_string.rs
tests/: command_integration_tests.rs  contains_tests.rs  operation_tests.rs  security_cryptographic_review.rs  security_memory_safety.rs  security_serialization_attacks.rs  security_sidechannel_attacks.rs  show_unredacted_tests.rs  unified_wrap_tests.rs  validate_format_tests.rs  wrap_with_complex_types_integration.rs
tests/configurations/: README.md
tests/nushell/: HOW_TO_RUN_TESTS.md  README.md  run_tests.nu  runner.nu  setup.nu  simple_test.nu  test_wrap_unified.nu
tests/nushell/commands/: unwrap_tests.nu  wrap_commands.nu  wrap_unified_tests.nu  wrap_with_complex_types_tests.nu
tests/nushell/fixtures/: config_samples.toml  secrets.nu  test_data.json
tests/nushell/integration/: basic_operations.nu
(+121 files in other folders)
