[package]
name = "nu_plugin_secret"
version = "0.1.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
description = "Production-grade secret handling plugin for Nushell with secure CustomValue types that prevent accidental exposure of sensitive data"
license = "BSD-3-Clause"
repository = "https://github.com/nushell-works/nu_plugin_secret"
homepage = "https://github.com/nushell-works/nu_plugin_secret"
documentation = "https://docs.rs/nu_plugin_secret/"
keywords = ["nushell", "secret", "security", "plugin", "custom-types"]
categories = ["command-line-utilities", "development-tools", "cryptography", "data-structures"]
readme = "README.md"
rust-version = "1.85.0"
publish = true
include = [
    "src/**/*",
    "tests/**/*",
    "benches/**/*",
    "docs/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "Cargo.toml"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin", "aarch64-apple-darwin"]

[package.metadata.release]
pre-release-replacements = [
    {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}"},
    {file="README.md", search="nu_plugin_secret = \"[^\"]*\"", replace="nu_plugin_secret = \"{{version}}\""},
]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "nushell-works/nu_plugin_secret", branch = "main", service = "github" }

[[bin]]
name = "nu_plugin_secret"
path = "src/main.rs"


[lib]
name = "nu_plugin_secret"
path = "src/lib.rs"

[dependencies]
# Core Nushell plugin dependencies
nu-plugin = "0.106.1"
nu-protocol = "0.106.1"

# Serialization and type system
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
bincode = "1.3"

# Security dependencies
zeroize = { version = "1.8", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
nu-test-support = "0.106.1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
serde_json = "1.0"
serde_yaml = "0.9"  
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true

[profile.test]
debug = true

[[bench]]
name = "secret_performance"
harness = false

[[bench]]
name = "plugin_startup"
harness = false

[[bench]]
name = "performance_regression"
harness = false