[package]
name = "nu_plugin_secret"
version = "0.5.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
description = "Production-grade secret handling plugin for Nushell with secure CustomValue types that prevent accidental exposure of sensitive data"
license = "BSD-3-Clause"
repository = "https://github.com/nushell-works/nu_plugin_secret"
homepage = "https://github.com/nushell-works/nu_plugin_secret"
documentation = "https://docs.rs/nu_plugin_secret/"
keywords = ["nushell", "secret", "security", "plugin", "custom-types"]
categories = ["command-line-utilities", "development-tools", "cryptography", "data-structures"]
readme = "README.md"
rust-version = "1.88.0"
publish = true
include = [
    "src/**/*.rs",
    "tests/**/*.rs", 
    "tests/**/*.nu",
    "benches/**/*.rs",
    "docs/**/*.md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "Cargo.toml"
]
exclude = [
    "**/*.bak",
    "tests/nushell/target/**",
    "target/**",
    "**/.DS_Store"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin", "aarch64-apple-darwin"]

[package.metadata.release]
pre-release-replacements = [
    {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}"},
    {file="README.md", search="nu_plugin_secret = \"[^\"]*\"", replace="nu_plugin_secret = \"{{version}}\""},
]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "nushell-works/nu_plugin_secret", branch = "main", service = "github" }

[[bin]]
name = "nu_plugin_secret"
path = "src/main.rs"


[lib]
name = "nu_plugin_secret"
path = "src/lib.rs"

[dependencies]
# Core Nushell plugin dependencies
nu-plugin = "0.109.1"
nu-protocol = "0.109.1"

# Serialization and type system
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
bincode = "1.3"

# Security dependencies
zeroize = { version = "1.8", features = ["derive"] }

# Cryptographic dependencies
blake3 = "1.5"
hex = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and filesystem
toml = "0.8"
dirs = "6.0"
sha2 = "0.10"
thiserror = "2.0"

# Templating for redaction
tera = "1.20"

[dev-dependencies]
nu-test-support = "0.109.1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true

[profile.test]
debug = true

[[bench]]
name = "secret_performance"
harness = false

[[bench]]
name = "plugin_startup"
harness = false

[[bench]]
name = "performance_regression"
harness = false